--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad">
 
     <!-- ========== Page Title ========== -->
     <title>Quienes somos?</title>
