--- a/blog-3-colum.html
+++ b/blog-3-colum.html
@@ -142,6 +142,7 @@
     <div class="banner-creado shadow">
         <div class="banner-image-creado"  style="background: url(assets/img/insights/hero-insights.png);"></div>
         <div class="banner-text-creado container">
+            <h4 class="sub-heading">insights</h4>
             <div class="row">
                 <div class="col-xl-6 banner--main">
                     <h2 class="banner-title">Mantente informado</h2>
@@ -156,6 +157,7 @@
     ============================================= -->
     <div class="blog-area blog-grid default-padding">
         <div class="container">
+            <h4 class="subtitular-servicios-normal heading d-flex justify-content-start">Tópicos de interés</h4>
             <div class="blog-item-box">
                 <div class="row">
                     <!-- Single Item -->
