--- a/contact-us.html
+++ b/contact-us.html
@@ -142,6 +142,7 @@
     <div class="banner-creado shadow">
         <div class="banner-image-creado"  style="background: url(assets/img/contacto/hero-contacto.png);"></div>
         <div class="banner-text-creado container">
+            <h4 class="sub-heading">contacto</h4>
             <div class="row">
                 <div class="col-xl-6 banner--main">
                     <h2 class="banner-title">¡Únete a la transformación y marca la diferencia hoy!</h2>
