--- a/blog-3-colum.html
+++ b/blog-3-colum.html
@@ -78,7 +78,7 @@
                     <div class="col-xl-7 col-lg-8 col-md-4 col-sm-4 col-4">
                         <div class="collapse navbar-collapse" id="navbar-menu">
 
-                            <img src="assets/img/sst-logo.png" alt="Logo">
+                            <a href="index.html"><img src="assets/img/sst-logo.png" alt="SST Logo"></a>
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                                 <i class="fa fa-times"></i>
                             </button>
