arreglo de pequeños errores

--- a/about-us.html
+++ b/about-us.html
@@ -143,7 +143,7 @@
     <div class="banner-creado">
         <div class="banner-image-creado"  style="background: url(assets/img/quienes-somos/hero-quienes-somos.png);"></div>
         <div class="banner-text-creado container">
-            <h4 class="sub-heading">quienes somos</h4>
+            <h4 class="sub-heading sub-heading-shadow">quienes somos</h4>
             <div class="row">
                 <div class="col-xl-6 banner--main">
                     <h2 class="banner-title">Construyendo sobre la confianza</h2>
