--- a/contact-us.html
+++ b/contact-us.html
@@ -142,7 +142,7 @@
     <div class="banner-creado shadow">
         <div class="banner-image-creado"  style="background: url(assets/img/contacto/hero-contacto.png);"></div>
         <div class="banner-text-creado container">
-            <h4 class="sub-heading">contacto</h4>
+            <h4 class="sub-heading sub-heading-shadow">contacto</h4>
             <div class="row">
                 <div class="col-xl-6 banner--main">
                     <h2 class="banner-title">¡Únete a la transformación y marca la diferencia hoy!</h2>
@@ -278,6 +278,22 @@ San Isidro-Lima
         </div>
     </div>
     <!-- End Contact Form -->
+
+    <div class="mt-120 mb-100">
+        <h4 class="socials">Síguenos en nuestras redes sociales</h4>
+        <div><ul class="social contacto-socials d-flex justify-content-center">
+            <li>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fas fa-envelope"></i></a>
+            </li>
+            </ul>
+        </div>
+    </div>
 
     <!-- Start Footer 
     ============================================= -->
