--- a/services.html
+++ b/services.html
@@ -177,7 +177,7 @@
     <div class="banner-creado">
         <div class="banner-image-creado"  style="background: url(assets/img/que-hacemos/hero-que-hacemos.png);"></div>
         <div class="banner-text-creado container">
-            <h4 class="sub-heading">que hacemos</h4>
+            <h4 class="sub-heading sub-heading-shadow">que hacemos</h4>
             <div class="row">
                 <div class="col-xl-6 banner--main">
                     <h2 class="banner-title">Transformamos su empresa a través de la Tecnología</h2>
