--- a/blog-3-colum.html
+++ b/blog-3-colum.html
@@ -147,9 +147,9 @@
     <div class="banner-creado shadow">
         <div class="banner-image-creado"  style="background: url(assets/img/insights/hero-insights.png);"></div>
         <div class="banner-text-creado container">
-            <h4 class="sub-heading sub-heading-shadow">insights</h4>
+            <h4 class="sub-heading sub-heading-shadow">Tecnología actual</h4>
             <div class="row">
-                <div class="col-xl-8 banner--main">
+                <div class="col-xl-7 banner--main">
                     <h2 class="banner-title">Mantente informado</h2>
                     <p class="descripcion">Creemos que el intercambio de conocimiento alimenta el crecimiento colectivo</p>
                 </div>
