cambios realizados el dia miercoles 23/3/2023

--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad">
 
     
-    <title>Quienes somos?</title>
+    <title>Quienes somos? - SST</title>
 
     
     <link rel="shortcut icon" href="assets/img/favicon-sst.png" type="image/x-icon">
