--- a/blog-single.html
+++ b/blog-single.html
@@ -184,14 +184,14 @@
                                             </li>
                                         </ul>
                                     </div> -->
-                                    <h3>La importancia de la transformación digital en las pymes</h3>
-                                    <p>
+                                    <h3 class="heading-black cabecera">La importancia de la transformación digital en las pymes</h3>
+                                    <p class="body-descripcion">
                                         La inteligencia artificial (IA) está transformando rápidamente la forma en que interactuamos con el mundo y cómo trabajamos. A medida que la IA se convierte en una parte cada vez más importante de nuestra vida diaria, también surge la preocupación por cómo se desarrolla y se utiliza. La ética del desarrollo de software es un tema candente en la actualidad, especialmente en lo que respecta a la IA. En SST, nos comprometemos a desarrollar software ético para garantizar que nuestra tecnología no solo sea efectiva, sino también responsable.
                                     </p>
-                                    <p>
+                                    <p class="body-descripcion">
                                         El desarrollo de software ético es esencial para garantizar que la IA se utilice de manera justa y responsable. Esto significa que el software se desarrolla teniendo en cuenta los valores éticos y la privacidad de los usuarios.
                                         SST se asegura de que el software que desarrollamos esté diseñado para mitigar estos riesgos.
-                                    </p>
+                                    </p class="body-descripcion">
                                     <blockquote>
                                         Es importante tener en cuenta que la IA no es perfecta, y puede tener sesgos o errores que deben ser detectados y corregidos antes de su lanzamiento al mercado. 
                                     </blockquote>
