--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad">
 
     <!-- ========== Page Title ========== -->
-    <title>Que hacemos?</title>
+    <title>Que hacemos? - SST</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon-sst.png" type="image/x-icon">
@@ -370,7 +370,7 @@
                                 <img src="assets/img/que-hacemos/productos-erp-comercial.png" alt="Thumb">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30">Optimiza la gestión de tu empresa con Trace ERP, el sistema informático integrado que simplifica y unifica todas las áreas de tu negocio en una sola plataforma. Toma decisiones informadas y eficaces, optimiza tus procesos y lleva tus operaciones al siguiente nivel.</p>
-                                <a class="btn-simple-producto" href="#">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
+                                <a class="btn-simple-producto" href="trace-erp-comercial.html">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
                             </div>
                         </div>
 
@@ -382,7 +382,7 @@
                                 <img src="assets/img/que-hacemos/productos-erp-industrial.png" alt="Thumb">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30">Trace ERP Industrial es la solución informática de gestión y planificación de recursos empresariales de SST diseñada para empresas del sector industrial. Con ella, podrás integrar todas las áreas de tu negocio en un solo sistema, lo que te permitirá mejorar la eficiencia, reducir los costos y tomar decisiones más informadas.</p>
-                                <a class="btn-simple-producto" href="#">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
+                                <a class="btn-simple-producto" href="trace-erp-industrial.html">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
                             </div>
                         </div>
 
@@ -394,7 +394,19 @@
                                 <img src="assets/img/que-hacemos/productos-erp-hotel.png" alt="Thumb">
                             </div></div>
                             <div class="col-12 col-md-5"><p class=" mt-30">Optimiza la gestión de tu empresa con Trace ERP, el sistema informático integrado que simplifica y unifica todas las áreas de tu negocio en una sola plataforma. Toma decisiones informadas y eficaces, optimiza tus procesos y lleva tus operaciones al siguiente nivel.</p>
-                                <a class="btn-simple-producto" href="#">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
+                                <a class="btn-simple-producto" href="trace-erp-hotel.html">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="row justify-content-md-center mt-30">
+                            
+                            <div class="col-12 col-md-3">
+                                <h5 class="subtitular-producto">Trace ERP Restaurante</h5>
+                                <div class="thumb">
+                                <img src="assets/img/que-hacemos/productos-erp-restaurante.png" alt="Thumb">
+                            </div></div>
+                            <div class="col-12 col-md-5"><p class=" mt-30">Trace ERP Industrial es la solución informática de gestión y planificación de recursos empresariales de SST diseñada para empresas del sector industrial. Con ella, podrás integrar todas las áreas de tu negocio en un solo sistema, lo que te permitirá mejorar la eficiencia, reducir los costos y tomar decisiones más informadas.</p>
+                                <a class="btn-simple-producto" href="trace-erp-restaurante.html">Ver más<i class="fas fa-arrow-right move-right-producto"></i></a>
                             </div>
                         </div>
                     </div>    
