--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad">
 
-    <title>SST - Sistemas, Servicios y Tecnologías SAC</title>
+    <title>Contacto - SST</title>
 
    
     <link rel="shortcut icon" href="assets/img/favicon-sst.png" type="image/x-icon">
