cambio en el boton

--- a/blog-single.html
+++ b/blog-single.html
@@ -283,7 +283,7 @@
                         <form action="#">
                             <input type="email" placeholder="Tu email" class="form-control" name="email">
                             <div class="mt-10">
-                                <button type="submit">Inscribirse <i class="fa fa-paper-plane"></i></button>
+                                <button class="button-boletin" type="submit">Inscribirse <i class="fa fa-paper-plane"></i></button>
                             </div>    
                         </form>
                     </div>
