Agregacion de historias de usuario

--- a/services.html
+++ b/services.html
@@ -441,7 +441,7 @@
                                 </ul>
                             </div>
                             <h4 class="title historia-usuario">
-                                <a href="#">Automatiza las tareas con IA </a>
+                                <a href="project-details.html">Automatiza las tareas con IA </a>
                             </h4>
                         </div>
 
