cambio en las fuentes

--- a/project-details.html
+++ b/project-details.html
@@ -224,7 +224,7 @@
                 <div class="top-info">
                     <div class="row">
                         <div class="col-xl-8 col-lg-7 pr-35 pr-md-15 pr-xs-15 left-info">
-                            <h2>Automatiza las tareas con IA</h2>
+                            <h2 class="heading-black cabecera">Automatiza las tareas con IA</h2>
                             <p class="body-descripcion">
                                 En la era de la transformación digital, las empresas se están dando cuenta de que automatizar tareas a través de la Inteligencia Artificial (IA) puede mejorar significativamente la eficiencia y la productividad de sus operaciones. SST, una empresa líder en soluciones de TI, sabe muy bien de qué se trata.
                                 Desde su fundación, SST ha sido pionera en la aplicación de tecnologías avanzadas en el mercado. A través de su enfoque centrado en el cliente y su compromiso con la innovación constante, SST se ha ganado una reputación como uno de los mejores proveedores de servicios de TI en el mercado.
