Cambios en el footer

--- a/contact-us.html
+++ b/contact-us.html
@@ -376,19 +376,19 @@ San Isidro-Lima
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img class="logo" src="assets/img/SST-logo-oscuro.png" alt="Logo">
+                            <img class="logo" src="assets/img/SST LOGO-DARK.png" alt="Logo">
                             <p>
                                 Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad
                             </p>
                             <ul class="social">
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.linkedin.com/company/sistemas-servicios-y-tecnologias-s-a-c-/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-envelope"></i></a>
+                                    <a href="mailto:contacto@sst.com.pe" target="_blank"><i class="fas fa-envelope"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -427,9 +427,9 @@ San Isidro-Lima
                                         </div>
                                         <div class="content">
                                             <strong>Correos:</strong>
-                                            <a href="">contacto@sst.com.pe
+                                            <a href="mailto:contacto@sst.com.pe" target="_blank">contacto@sst.com.pe
                                             </a>
-                                            <a href="">ventas@sst.com.pe
+                                            <a href="mailto:ventas@sst.com.pe" target="_blank">ventas@sst.com.pe
                                             </a>
                                         </div>
                                     </li>
@@ -439,7 +439,7 @@ San Isidro-Lima
                                         </div>
                                         <div class="content">
                                             <strong>Celular:</strong>
-                                            <a href="tel:2151234567">+51 989 092 000</a>
+                                            <a href="tel:51989092000">+51 989 092 000</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -473,8 +473,6 @@ San Isidro-Lima
                 </div>
             </div>
         </div>
-        <!-- End Footer Bottom -->
-    </footer>
     <!-- End Footer -->
     
     <!-- jQuery Frameworks
