--- a/about-us.html
+++ b/about-us.html
@@ -549,6 +549,7 @@ San Isidro-Lima
                 </div>
             </div>
         </div>
+    </footer>
     <!-- End Footer -->
     
     <!-- jQuery Frameworks
