--- a/contact-us.html
+++ b/contact-us.html
@@ -473,6 +473,7 @@ San Isidro-Lima
                 </div>
             </div>
         </div>
+    </footer>
     <!-- End Footer -->
     
     <!-- jQuery Frameworks
