Limpieza de archivos 1

--- a/trace-erp-comercial.html
+++ b/trace-erp-comercial.html
@@ -88,13 +88,13 @@
                             
                             <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                                 
-                                <li><a href="services.html">Que hacemos?</a></li>
+                                <li><a href="que-hacemos.html">Que hacemos?</a></li>
 
-                                <li><a href="about-us.html">Quienes somos?</a></li>
+                                <li><a href="quienes-somos.html">Quienes somos?</a></li>
 
-                                <li><a href="blog-3-colum.html">Tecnología Actual</a></li>
+                                <li><a href="tecnologia-actual.html">Tecnología Actual</a></li>
 
-                                <li><a href="contact-us.html">Contacto</a></li>
+                                <li><a href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
                                 <i class="fas fa-phone-alt"></i>
                                 <h2>+(51)989 092 000</h2>
                                 <h4><a href="mailto:info@crysta.com">contacto@sst.com.pe</a></h4>
-                                <a class="btn mt-30 btn-sm btn-theme" href="#">Contáctanos</a>
+                                <a class="btn mt-30 btn-sm btn-theme" href="contacto.html">Contáctanos</a>
                             </div>
                         </div>
                         <!-- Single Widget -->
