--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                                     </ul>
                                 </li> -->
 
-                                <li><a href="services.html">Que hacemos?</a></li>
+                                <li><a href="que-hacemos.html">Que hacemos?</a></li>
 
-                                <li><a href="about-us.html">Quienes somos?</a></li>
+                                <li><a href="quienes-somos.html">Quienes somos?</a></li>
 
-                                <li><a href="blog-3-colum.html">Tecnología Actual</a></li>
+                                <li><a href="tecnologia-actual.html">Tecnología Actual</a></li>
 
                                 <!-- <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Projects</a>
@@ -163,7 +163,7 @@
                                         <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
                                     </ul>
                                 </li> -->
-                                <li><a href="contact-us.html">Contacto</a></li>
+                                <li><a href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                     <h2 class="banner-title">Construyendo el <br> futuro de su empresa</h2>
                     <p class="descripcion">Juntos, transformaremos su visión de futuro en realidad aprovechando los beneficios del mundo digital</p>
                     <div class="button">
-                        <a class="btn btn-gradient btn-md radius animation" href="blog-3-colum.html">Descubre</a>
+                        <a class="btn btn-gradient btn-md radius animation" href="tecnologia-actual.html">Descubre</a>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                     <p class="mb--5 body-descripcion">
                         Nuestros servicios permiten afrontar el reto de la transformación digital, desde el diseño y planeamiento del negocio hasta la consolidación del crecimiento de las ventas, reducción de costos operativos y de almacenamiento.
                     </p>
-                    <a class="btn-simple" href="services.html">Todos nuestros servicios<i class="fas fa-arrow-right move-right"></i></a>
+                    <a class="btn-simple" href="que-hacemos.html">Todos nuestros servicios<i class="fas fa-arrow-right move-right"></i></a>
                     </div>
 
                     <div class="choose-us-style-one col-xl-5 col-lg-12 mt-30">
@@ -381,7 +381,7 @@
                     <p class="mb--5 body-descripcion">
                         SST es una empresa especializada en servicios, consultoría y soluciones de negocio basadas en TI con mas de 10 años de experiencia en la industria, acompañando la transformación y el crecimiento de empresas lideres a través de la tecnología.
                     </p>
-                    <a class="btn-simple" href="about-us.html">¡Ven y conócenos!<i class="fas fa-arrow-right move-right"></i></a>
+                    <a class="btn-simple" href="quienes-somos.html">¡Ven y conócenos!<i class="fas fa-arrow-right move-right"></i></a>
                 </div>
 
                 <div class="choose-us-style-one col-xl-5 col-lg-12 mt-40">
