--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -138,11 +138,11 @@
                                     </ul>
                                 </li> -->
 
-                                <li><a href="services.html">Que hacemos?</a></li>
+                                <li><a href="que-hacemos.html">Que hacemos?</a></li>
 
-                                <li><a href="about-us.html">Quienes somos?</a></li>
+                                <li><a href="quienes-somos.html">Quienes somos?</a></li>
 
-                                <li><a href="blog-3-colum.html">Tecnología Actual</a></li>
+                                <li><a href="tecnologia-actual.html">Tecnología Actual</a></li>
 
                                 <!-- <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Projects</a>
@@ -172,7 +172,7 @@
                                         <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
                                     </ul>
                                 </li> -->
-                                <li><a href="contact-us.html">Contacto</a></li>
+                                <li><a href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
