cambios en los productos Tracer ERP

--- a/trace-erp-comercial.html
+++ b/trace-erp-comercial.html
@@ -168,7 +168,7 @@
                         <!-- <div class="thumb">
                             <img src="assets/img/1500x700.png" alt="Thumb">
                         </div> -->
-                        <h2 class="heading-black cabecera">Una solución financiera universal</h2>
+                        <h2 class="heading-black cabecera">Automatiza tus procesos y reduce costos</h2>
                         <P class="body-descripcion">
                             Si eres dueño de un negocio en el sector comercial, sabes que la gestión eficiente de tus operaciones es crucial para el éxito a largo plazo. Desde el seguimiento de las existencias y las ventas hasta la administración del personal y la facturación, el comercio puede ser un negocio desafiante y complejo. Es por eso que existen herramientas como TRACE ERP Comercial, que se enfoca en brindarte una solución integral y eficiente para la gestión de tu negocio.
                         </P>
@@ -196,17 +196,17 @@
                                     <div class="content">
                                         <h3>Beneficios</h3>
                                         <ul>
-                                            <li>No Hidden Charges</li>
-                                            <li>Special Careness Risk Free</li>
-                                            <li>Quality Standards</li>
-                                            <li>15+ Years Experiences</li>
+                                            <li>Mayor eficiencia</li>
+                                            <li>Mayor visibilidad</li>
+                                            <li>Mejora de la gestión de inventario</li>
+                                            <li>Mejora en la atención al cliente</li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <p class="body-descripcion">
-                            Nam libero tempore, cum soluta nobis est elig endi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repelle ndus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias. consequatur aut perferendis doloribus asperiores repellat. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.  pleasures have to be repudiated. 
+                            En resumen, TRACE ERP Comercial es una solución integral y eficiente para la gestión de empresas del sector comercial. Con sus funciones y características específicas para el sector, este software ayuda a las empresas a mejorar su eficiencia, reducir costos y mejorar su rentabilidad. Si buscas mejorar la gestión de tu negocio, TRACE ERP Comercial es la respuesta que estás buscando. ¡No esperes más para transformar tu negocio y llevarlo al siguiente nivel con TRACE ERP Comercial!
                         </p>
                         <!-- <div class="services-more">
                             <h2>Popular Services</h2>
