--- a/trace-erp-hotel.html
+++ b/trace-erp-hotel.html
@@ -9,13 +9,11 @@
     <meta name="description" content="Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad">
 
     
-    <title>Trace ERP Comercial - SST</title>
+    <title>Trace ERP Hoteles - SST</title>
 
     
     <link rel="shortcut icon" href="assets/img/favicon-sst.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Inter:wght@100;200;300;400;700;800&family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
+  
 
 
 
@@ -146,10 +144,10 @@
     <div class="banner-creado">
         <div class="banner-image-creado"  style="background: url(assets/img/que-hacemos/banner-trace-erp-hotel.png);"></div>
         <div class="banner-text-creado container">
-            <h4 class="sub-heading sub-heading-shadow">que hacemos / TRACE erp comercial</h4>
+            <h4 class="sub-heading sub-heading-shadow">que hacemos / TRACE erp hoteles</h4>
             <div class="row">
                 <div class="col-xl-8 banner--main">
-                    <h2 class="banner-title">Aumenta la eficiencia y rentabilidad de tu negocio</h2>
+                    <h2 class="banner-title">Transforma tu negocio con tecnología avanzada</h2>
                     <!-- <p class="descripcion">Somos un empresa responsable, generamos cambios positivos en beneficio a la sociedad</p> -->
                 </div>
             </div>
@@ -168,15 +166,15 @@
                         <!-- <div class="thumb">
                             <img src="assets/img/1500x700.png" alt="Thumb">
                         </div> -->
-                        <h2 class="heading-black cabecera">Una solución financiera universal</h2>
+                        <h2 class="heading-black cabecera">Convierta su hotel en un oasis de eficiencia, productividad y rentabilidad</h2>
                         <P class="body-descripcion">
-                            Si eres dueño de un negocio en el sector comercial, sabes que la gestión eficiente de tus operaciones es crucial para el éxito a largo plazo. Desde el seguimiento de las existencias y las ventas hasta la administración del personal y la facturación, el comercio puede ser un negocio desafiante y complejo. Es por eso que existen herramientas como TRACE ERP Comercial, que se enfoca en brindarte una solución integral y eficiente para la gestión de tu negocio.
+                            La administración eficiente de un hotel puede ser un desafío, desde la gestión de reservas y habitaciones hasta la contabilidad y la facturación. Es por eso que TRACE ERP Hoteles es la solución integral que necesitas para mantener tu negocio funcionando sin problemas.
                         </P>
                         <p class="body-descripcion">
-                            TRACE ERP Comercial está diseñado específicamente para empresas del sector comercial. Este sistema de gestión empresarial ayuda a las empresas a automatizar y mejorar sus procesos comerciales, lo que les permite aumentar su eficiencia, reducir costos y mejorar su rentabilidad.
+                            Este software de gestión empresarial está diseñado específicamente para satisfacer las necesidades de la industria hotelera. Con TRACE ERP Hoteles, puedes automatizar y mejorar tus procesos comerciales, lo que te permite aumentar la eficiencia, reducir costos y mejorar la satisfacción del cliente.
                         </p>
                         <p class="body-descripcion">
-                            Este software ofrece una amplia gama de funciones y características que están diseñadas específicamente para satisfacer las necesidades de las empresas del sector comercial. Algunas de las características clave que ofrece TRACE ERP Comercial incluyen:
+                            Es por ello que TRACE ERP Hoteles ofrece:
                         </p>
                         <div class="features">
                             <div class="row">
@@ -184,11 +182,10 @@
                                     <div class="content">
                                         <h3>Servicios incluidos</h3>
                                         <ul>
-                                            <li>Gestión de inventario</li>
-                                            <li>Gestión de ventas</li>
-                                            <li>Gestión financiera</li>
-                                            <li>Gestión de compras</li>
-                                            <li>Gestión de clientes</li>
+                                            <li>Gestión de reservas y habitaciones</li>
+                                            <li>Gestión de inventario de habitaciones y suministros</li>
+                                            <li>Contabilidad y facturación automatizada</li>
+                                            <li>Gestión de personal y nómina</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -196,17 +193,17 @@
                                     <div class="content">
                                         <h3>Beneficios</h3>
                                         <ul>
-                                            <li>No Hidden Charges</li>
-                                            <li>Special Careness Risk Free</li>
-                                            <li>Quality Standards</li>
-                                            <li>15+ Years Experiences</li>
+                                            <li>Mayor eficiencia en la gestión de tu hotel</li>
+                                            <li>Mayor visibilidad de tus operaciones para una mejor toma de decisiones</li>
+                                            <li>Reducción de costos y mejora de la rentabilidad</li>
+                                            <li>Mejora en la satisfacción del cliente al brindar un servicio más eficiente y personalizado</li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <p class="body-descripcion">
-                            Nam libero tempore, cum soluta nobis est elig endi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repelle ndus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias. consequatur aut perferendis doloribus asperiores repellat. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.  pleasures have to be repudiated. 
+                            En resumen, TRACE ERP Hoteles es una solución integral y eficiente para la gestión de hoteles. Con sus funciones y características específicas para la industria hotelera, este software ayuda a las empresas a mejorar su eficiencia, reducir costos y mejorar la satisfacción del cliente. Si buscas mejorar la gestión de tu hotel, TRACE ERP Hoteles es la respuesta que estás buscando. ¡No esperes más para transformar tu negocio y llevarlo al siguiente nivel con TRACE ERP Hoteles!
                         </p>
                         <!-- <div class="services-more">
                             <h2>Popular Services</h2>
