--- a/trace-erp-industrial.html
+++ b/trace-erp-industrial.html
@@ -9,13 +9,10 @@
     <meta name="description" content="Somos eficientes y capaces de enfrentar retos tecnológicos, brindando un servicio integral de calidad">
 
     
-    <title>Trace ERP Comercial - SST</title>
+    <title>Trace ERP Industrial - SST</title>
 
     
     <link rel="shortcut icon" href="assets/img/favicon-sst.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Inter:wght@100;200;300;400;700;800&family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
 
 
 
@@ -146,10 +143,10 @@
     <div class="banner-creado">
         <div class="banner-image-creado"  style="background: url(assets/img/que-hacemos/banner-trace-erp-industrial.png);"></div>
         <div class="banner-text-creado container">
-            <h4 class="sub-heading sub-heading-shadow">que hacemos / TRACE erp comercial</h4>
+            <h4 class="sub-heading sub-heading-shadow">que hacemos / TRACE erp industrial</h4>
             <div class="row">
                 <div class="col-xl-8 banner--main">
-                    <h2 class="banner-title">Aumenta la eficiencia y rentabilidad de tu negocio</h2>
+                    <h2 class="banner-title">Mejora la eficiencia de tus operaciones</h2>
                     <!-- <p class="descripcion">Somos un empresa responsable, generamos cambios positivos en beneficio a la sociedad</p> -->
                 </div>
             </div>
@@ -168,15 +165,17 @@
                         <!-- <div class="thumb">
                             <img src="assets/img/1500x700.png" alt="Thumb">
                         </div> -->
-                        <h2 class="heading-black cabecera">Una solución financiera universal</h2>
+                        <h2 class="heading-black cabecera">
+                            Simplifique sus procesos, tome el control de su negocio
+                        </h2>
                         <P class="body-descripcion">
-                            Si eres dueño de un negocio en el sector comercial, sabes que la gestión eficiente de tus operaciones es crucial para el éxito a largo plazo. Desde el seguimiento de las existencias y las ventas hasta la administración del personal y la facturación, el comercio puede ser un negocio desafiante y complejo. Es por eso que existen herramientas como TRACE ERP Comercial, que se enfoca en brindarte una solución integral y eficiente para la gestión de tu negocio.
+                            La gestión eficiente de las operaciones es fundamental para el éxito de cualquier empresa en el sector industrial. Desde la planificación de la producción hasta la administración de la cadena de suministro, el sector industrial puede ser un negocio complejo y desafiante. Es por eso que existe TRACE ERP Industrial, una solución integral y eficiente diseñada para ayudar a las empresas a optimizar sus procesos industriales.
                         </P>
                         <p class="body-descripcion">
-                            TRACE ERP Comercial está diseñado específicamente para empresas del sector comercial. Este sistema de gestión empresarial ayuda a las empresas a automatizar y mejorar sus procesos comerciales, lo que les permite aumentar su eficiencia, reducir costos y mejorar su rentabilidad.
+                            TRACE ERP Industrial está diseñado específicamente para empresas del sector industrial. Este sistema de gestión empresarial ayuda a las empresas a automatizar y mejorar sus procesos industriales, lo que les permite aumentar su eficiencia, reducir costos y mejorar su rentabilidad.
                         </p>
                         <p class="body-descripcion">
-                            Este software ofrece una amplia gama de funciones y características que están diseñadas específicamente para satisfacer las necesidades de las empresas del sector comercial. Algunas de las características clave que ofrece TRACE ERP Comercial incluyen:
+                            Este software ofrece una amplia gama de funciones y características que están diseñadas específicamente para satisfacer las necesidades de las empresas del sector industrial. Algunas de las características clave que ofrece TRACE ERP Industrial incluyen:
                         </p>
                         <div class="features">
                             <div class="row">
@@ -184,11 +183,11 @@
                                     <div class="content">
                                         <h3>Servicios incluidos</h3>
                                         <ul>
-                                            <li>Gestión de inventario</li>
-                                            <li>Gestión de ventas</li>
+                                            <li>Gestión de la producción</li>
+                                            <li>Gestión de la cadena de suministro</li>
+                                            <li>Gestión de la calidad</li>
+                                            <li>Gestión de los recursos humanos</li>
                                             <li>Gestión financiera</li>
-                                            <li>Gestión de compras</li>
-                                            <li>Gestión de clientes</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -196,17 +195,17 @@
                                     <div class="content">
                                         <h3>Beneficios</h3>
                                         <ul>
-                                            <li>No Hidden Charges</li>
-                                            <li>Special Careness Risk Free</li>
-                                            <li>Quality Standards</li>
-                                            <li>15+ Years Experiences</li>
+                                            <li>Mayor eficiencia en la producción</li>
+                                            <li>Mayor visibilidad en la cadena de suministro</li>
+                                            <li>Mejora en la gestión de la calidad</li>
+                                            <li>Mejora en la gestión de los recursos humanos</li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <p class="body-descripcion">
-                            Nam libero tempore, cum soluta nobis est elig endi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repelle ndus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias. consequatur aut perferendis doloribus asperiores repellat. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.  pleasures have to be repudiated. 
+                            En resumen, TRACE ERP Industrial es una solución integral y eficiente para la gestión de empresas del sector industrial. Con sus funciones y características específicas para el sector, este software ayuda a las empresas a mejorar su eficiencia, reducir costos y mejorar su rentabilidad. Si buscas optimizar la gestión de tu empresa industrial, TRACE ERP Industrial es la respuesta que estás buscando. ¡No esperes más para llevar tu negocio al siguiente nivel con TRACE ERP Industrial!
                         </p>
                         <!-- <div class="services-more">
                             <h2>Popular Services</h2>
