Cambios realizados el 24/3/2023 parte2

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                 </ul>
                             </div>
                             <h4 class="title">
-                                <a href="#">La importancia del talento humano y el desarrollo del software</a>
+                                <a href="talento-humano-software.html">La importancia del talento humano y el desarrollo del software</a>
                             </h4>
                         </div>
                         <!-- <div class="author">
@@ -455,7 +455,7 @@
                                 </ul>
                             </div>
                             <h4 class="title">
-                                <a href="blog-single.html">La importancia de la transformación digital en las pymes</a>
+                                <a href="transformacion-digital-pymes.html">La importancia de la transformación digital en las pymes</a>
                             </h4>
                         </div>
                     </div>
@@ -476,7 +476,7 @@
                                 </ul>
                             </div>
                             <h4 class="title">
-                                <a href="#">Cómo las soluciones de inteligencia de negocios están ayudando a las empresas a tomar decisiones informadas</a>
+                                <a href="inteligencia-negocios-empresas.html">Cómo las soluciones de inteligencia de negocios están ayudando a las empresas a tomar decisiones informadas</a>
                             </h4>
                         </div>
                     </div>
